fixing ellipsis product-grid elements on mobile and adding a different product photo

--- a/apps/foundation-app/src/app/product/components/product-grid/product-grid.component.scss
+++ b/apps/foundation-app/src/app/product/components/product-grid/product-grid.component.scss
@@ -7,6 +7,15 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 50px 20px;
 
+  /*
+  * This allows text-overflow: ellipsis elements to not break their
+  * bounding grid items.
+  */
+  > * {
+    min-width: 0;
+  }
+  
+
   @include breakpoint(large) {
     grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
   }
