--- a/apps/foundation-app/src/scss/styles.scss
+++ b/apps/foundation-app/src/scss/styles.scss
@@ -23,4 +23,5 @@ body {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  display: block;
 }
